deploy/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-test
  name: nginx-test
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - image: nginx:stable-perl
        name: nginx
        resources: {}
status: {}
