deploy/MutatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: example-mutating-webhook
webhooks:
  - name: pod-mutator.example.com
    clientConfig:
      url: "https://localhost:8443/"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKVENDQWcyZ0F3SUJBZ0lVWUp5cHM0ZjVCZGJiVEU1ZnZtanNJMDV3NTJvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZERVNNQkFHQTFVRUF3d0piRzlqWVd4b2IzTjBNQjRYRFRJMU1Ea3dPVEUxTVRZeE9Gb1hEVEkyTURrdwpPVEUxTVRZeE9Gb3dGREVTTUJBR0ExVUVBd3dKYkc5allXeG9iM04wTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBdS9hcWdscUgvbnBxM2YvcXlDR2IrOUd6bVBWVEJFK1VuallkdnByZVB5elgKeDNTLzFsZ24vWEF6WERxbnFRWFJoODRzVmpxRXU0bDIveWVnYzBFcjBoQ2ZOSEhsbmExc2ZsalVvT2hUY0UyeAorR1EwYlZQSG5k [...]
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        operations: ["CREATE"]
        scope: "Namespaced"
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
